<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
	<groupId>be.vlaanderen.informatievlaanderen.vsds</groupId>
    <artifactId>ldes-server</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>ldes-server-domain</module>
        <module>ldes-server-infra-mongo</module>
        <module>ldes-server-port-publication-rest</module>
        <module>ldes-server-application</module>
        <module>ldes-server-port-ingestion-rest</module>
    </modules>
	
    <properties>
    	<!-- MAVEN -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>

    	<!-- VSDS -->
    	<project.base.groupId>be.vlaanderen.informatievlaanderen.vsds</project.base.groupId>

    	<!-- SPRING BOOT -->
		<spring-boot.version>2.7.1</spring-boot.version>

		<!-- JSON & RDF -->
		<json-simple.version>1.1.1</json-simple.version>
		<apache-jena.version>4.5.0</apache-jena.version>

		<!-- TESTING -->
		<junit.version>4.13.2</junit.version>
		<jupiter.version>5.8.2</jupiter.version>
		<junit-jupiter-api.version>5.8.2</junit-jupiter-api.version>
		<mockito.version>4.6.1</mockito.version>
		<wiremock-jre8.version>2.33.2</wiremock-jre8.version>
		<byte-buddy.version>1.12.11</byte-buddy.version>
 		<de.flapdoodle.embed.mongo.version>3.4.6</de.flapdoodle.embed.mongo.version>

 		<!-- VULNERABILITY -->
		<depencency-check-maven.version>7.1.1</depencency-check-maven.version>

        <!-- JACOCO -->
        <jacoco.version>0.8.8</jacoco.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}${basedir}/../target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.language>java</sonar.language>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>vsds-sonar</sonar.organization>
		<sonar.projectKey>VSDS-LDESServer4J-${project.groupId}:${project.artifactId}</sonar.projectKey>


		<!-- CODE FORMATTER -->
		<formatter-maven-plugin.version>2.19.0</formatter-maven-plugin.version>
		<skipFormatCode>false</skipFormatCode>
    </properties>

    <dependencyManagement>
    	<dependencies>
    		<!-- VSDS -->
    		<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>ldes-server-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>ldes-server-domain</artifactId>
				<version>${project.version}</version>
			</dependency>

	    	<!-- SPRING BOOT -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-parent</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- JSON & RDF -->
			<dependency>
				<groupId>com.googlecode.json-simple</groupId>
				<artifactId>json-simple</artifactId>
				<version>${json-simple.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>jena-arq</artifactId>
				<version>${apache-jena.version}</version>
			</dependency>

			<!-- TESTING -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>${spring-boot.version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>org.junit.vintage</groupId>
						<artifactId>junit-vintage-engine</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.tomakehurst</groupId>
				<artifactId>wiremock-jre8</artifactId>
				<version>${wiremock-jre8.version}</version>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>${byte-buddy.version}</version>
			</dependency>
			<dependency>
				<groupId>de.flapdoodle.embed</groupId>
				<artifactId>de.flapdoodle.embed.mongo</artifactId>
				<version>${de.flapdoodle.embed.mongo.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
    </dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
	            <!-- MAVEN -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-assembly-plugin</artifactId>
	                <version>${maven-assembly-plugin.version}</version>
	                <configuration>
	                    <descriptorRefs>
	                        <descriptorRef>jar-with-dependencies</descriptorRef>
	                    </descriptorRefs>
	                </configuration>
	                <executions>
	                    <execution>
	                        <id>make-assembly</id>
	                        <phase>package</phase>
	                        <goals>
	                            <goal>single</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release-plugin.version}</version>
					<configuration>
						<scmCommentPrefix>[ci skip]</scmCommentPrefix>
						<tagNameFormat>@{project.version}</tagNameFormat>
					</configuration>
				</plugin>

	            <!-- SPRING BOOT -->
	            <plugin>
	                <groupId>org.springframework.boot</groupId>
	                <artifactId>spring-boot-maven-plugin</artifactId>
	                <version>${spring-boot.version}</version>
	                <executions>
	                    <execution>
	                        <goals>
	                            <goal>repackage</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>

	            <!-- VULNERABILITY -->
				<plugin>
					<groupId>org.owasp</groupId>
					<artifactId>dependency-check-maven</artifactId>
					<version>${depencency-check-maven.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

	            <!-- JACOCO -->
	            <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>

                <!-- CODE FORMATTER -->
				<plugin>
                    <groupId>net.revelc.code.formatter</groupId>
                    <artifactId>formatter-maven-plugin</artifactId>
                    <version>${formatter-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>validate</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <skip>${skipFormatCode}</skip>
                    </configuration>
                </plugin>
			</plugins>
		</pluginManagement>

        <plugins>
            <!-- CODE FORMATTER -->
<!--            <plugin>-->
<!--            	<groupId>net.revelc.code.formatter</groupId>-->
<!--            	<artifactId>formatter-maven-plugin</artifactId>-->
<!--            </plugin>-->

			<!-- RELEASE -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
			</plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/Informatievlaanderen/VSDS-LDES</url>
        </repository>
    </repositories>

	<profiles>
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<formats>
										<format>XML</format>
									</formats>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub OWNER Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/Informatievlaanderen/VSDS-LDESServer4J</url>
		</repository>
	</distributionManagement>


	<scm>
		<connection>scm:git:${project.scm.url}</connection>
		<developerConnection>scm:git:${project.scm.url}</developerConnection>
		<url>git@github.com:Informatievlaanderen/VSDS-LDESServer4J.git</url>
		<tag>HEAD</tag>
	</scm>
</project>
